* Shots as lines on radar - Valery Fouques, Tim Riker
* CTF world from file - Colin Bayer, Tim Riker
* patch playerIds to prepare for one tcp port - Tim Riker
* missile sound effect - Dave Brosius
* udp first then multicast, IRIX fix? (use -i <> for multicast) - Tim Riker
* enhanced radar - Jeremiah
* don't relay read in player read - Frank Thilo, Tim Riker


BZFlag 1.7e2
------------

* bzfs performance fix, wait loop removal - chestal/timr
* limbo flag bugfix - chestal
* *bsd cleanups from new ports maintainer - Nick Sayer
* scrollback cleanups - crs
* minimum size now 256x192 - Tim Riker
* various bug fixes - many

BZFlag 1.7e1
------------

* optional UDP unicast based networking,
  downward compatible with the old TCP method - frank
* GM now leave smoke trail - frank
* Explosions are larger - frank
* Scrollback and Line wrap (use pageup/down keys) - Digit1
* radar tank dots are larger - frank
* robots have playerxx names and player's email - Tim Riker
* colorize console messages - Tim Riker
* robots score when killing 'owner' - chestal <thilo@unix-ag.org>
* flags under high buildings - Jeremiah
* "world" section in world from file - Jeremiah
* dim paused/nr tanks on radar - chestal
* fix bzfls for servers on non-5155 - Tim Riker
* pgup/pgdn support in help menu - Kris Verbeeck
* stop using signal() as suggested by Frank Thilo - Tim Riker
* Triple buffering support (actually n way buffering) - XiGraphics
* Joystick support - XiGraphics
* teleporter shot handling improved - chestal
* udp network code reworking to select() on one server port - Tim Riker
* rogue tank placement on enter - chestal
* pseudo variable height buildings in cf mode - Tim Riker
* don't drain and flush audio on solaris - frank
* alpha Macintosh port - Darrell Walisser <dwaliss1@purdue.edu>
* quick message support - Kris Verbeeck
* /kick and /lagstats server messages, -passwd - Frank Thilo


BZFlag 1.7e release 000
-----------------------

* Tim Riker <Tim@Rikers.org> now maintainer